syntax = "proto3";

package playhouse.benchmark.ss;

option csharp_namespace = "PlayHouse.Benchmark.SS.Shared.Proto";

// Stage 생성 관련
message CreateStageRequest {
    string play_nid = 1;
    string stage_type = 2;
    int64 stage_id = 3;
}

message CreateStageReply {
    bool success = 1;
    int32 error_code = 2;
    int64 stage_id = 3;
    string play_nid = 4;
    string error_message = 5;
}

enum SSCommMode {
    REQUEST_ASYNC = 0;
    REQUEST_CALLBACK = 1;
    SEND = 2;
}

// 클라이언트 -> Stage 트리거
message TriggerSSEchoRequest {
    int32 batch_size = 1;      // 한번 트리거에 수행할 S2S 요청 수 (Inflght 역할)
    SSCommMode comm_mode = 3;  // 통신 모드
    bytes payload = 4;         // 전송할 페이로드 데이터
}

// Stage -> 클라이언트 응답
message TriggerSSEchoReply {
    int32 count = 1;           // 처리된 S2S 메시지 수
    int64 elapsed_ticks = 2;   // 서버 측 처리 시간
}

// S2S Echo 메시지
message SSEchoRequest {
    bytes payload = 1;
}

message SSEchoReply {
    bytes payload = 1;
}